<resources>
    <string name="app_name">Profile Manager</string>
    <string name="welcome">Welcome</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your Username:</string>
    <string name="john_doe">John Doe</string>
    <string name="enter_your_password">Enter your Password:</string>
    <string name="password">Password</string>
    <string name="enter_your_first_name">Enter your First Name:</string>
    <string name="john">John</string>
    <string name="enter_your_second_name">Enter your Second Name:</string>
    <string name="doe">Doe</string>
    <string name="logout">Logout</string>
    <string name="kebabmenu_action">kebabmenu_action</string>
    <string name="profile">PROFILE</string>
    <string name="profile_information">Profile Information</string>
    <string name="account_settings">Account Settings</string>
    <string name="reviews">Reviews</string>
    <string name="profilepic">Profilepic</string>
    <string name="username_will_appear_here">Username will appear here</string>
    <string name="profile_picture">Profile Picture</string>
</resources>