<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp">

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:contentDescription="@string/kebabmenu_action"
            android:onClick="showPopup"
            android:layout_marginStart="310dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/kebab_menu" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/profile"
            android:scaleType="centerCrop"
            android:contentDescription="@string/profile_picture"/>
        <TextView
            android:id="@+id/profileUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username_will_appear_here"
            android:textSize="20sp"
            android:textAlignment="center"
            android:fontFamily="sans-serif-condensed"/>

        <!-- Navigation Button -->
        <Button
            android:id="@+id/btnInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/profile_information" />
        <Button
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/account_settings" />
        <Button
            android:id="@+id/btnReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/reviews" />
    </LinearLayout>
</ScrollView>
