<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:text="@string/enter_your_first_name"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textFirstname"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="70dp"
            android:layout_marginBottom="14dp" app:layout_constraintBottom_toTopOf="@+id/txtFname"
            android:layout_marginEnd="167dp" app:layout_constraintEnd_toEndOf="parent"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:autofillHints="" android:inputType="text"
            android:hint="@string/john"
            android:ems="10"
            android:id="@+id/txtFname"
            android:padding="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textFirstname" android:layout_marginEnd="169dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/textView"/>
    <TextView
            android:text="@string/enter_your_second_name"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/txtFname" android:layout_marginEnd="139dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/txtLname"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/doe"
            android:id="@+id/txtLname"
            android:ems="10"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/textView2" android:layout_marginEnd="169dp"
            app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
            android:text="@string/enter_your_username"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLname"
            android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/txtUsername"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/john_doe"
            android:ems="10"
            android:id="@+id/txtUsername"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="169dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/textPassword"/>
    <TextView
            android:text="@string/enter_your_password"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPassword"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginTop="14dp" app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            android:layout_marginEnd="178dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="14dp"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="@string/password"
            android:id="@+id/txtPassword"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="167dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="45dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonRegister"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:layout_marginTop="45dp"
            android:onClick="RegisterUser"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="149dp"
            android:layout_marginEnd="172dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="49dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>