<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Username"
            android:text="@string/enter_your_username"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="94dp"
            android:layout_marginEnd="174dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toTopOf="@+id/txtUsername"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="text"
            android:hint="@string/john_doe"
            android:ems="10"
            android:id="@+id/txtUsername"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/Username"
            android:layout_marginEnd="169dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="26dp"
            app:layout_constraintBottom_toTopOf="@+id/textPassword"/>
    <TextView
            android:text="@string/enter_your_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textPassword"
            android:textSize="24sp"
            android:fontFamily="sans-serif-condensed-medium"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/txtUsername"
            android:layout_marginEnd="178dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:layout_constraintBottom_toTopOf="@+id/txtPassword2"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/txtPassword2"
            android:hint="@string/password"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginTop="26dp"
            app:layout_constraintTop_toBottomOf="@+id/textPassword"
            android:layout_marginEnd="169dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="68dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="120dp"
            android:layout_marginTop="73dp"
            app:layout_constraintTop_toBottomOf="@+id/txtPassword2"
            android:layout_marginEnd="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="192dp"
            app:layout_constraintHorizontal_bias="1.0"/>


</androidx.constraintlayout.widget.ConstraintLayout>