<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:id="@+id/scrollView2">

    <TextView
            android:text="@string/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/welcomeText"
            android:textAlignment="center"
            android:textSize="30sp"
            android:fontFamily="@font/amaranth_bold"
            android:layout_marginBottom="160dp"
            app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="209dp"/>
    <Button
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonLogin"
            android:layout_marginTop="7dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="277dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="150dp"
            app:layout_constraintEnd_toStartOf="@+id/buttonRegister"
            android:layout_marginEnd="84dp"
            android:onClick="Login"/>
    <Button
            android:text="@string/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonRegister"
            android:layout_marginTop="163dp"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            android:layout_marginEnd="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            app:layout_constraintStart_toEndOf="@+id/buttonLogin"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="277dp"
            android:onClick="Register"/>


</androidx.constraintlayout.widget.ConstraintLayout>
